--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"precommit": "lint-staged"
 	},
 	"devDependencies": {
+		"@highlightjs/cdn-assets": "^11.5.1",
 		"@lwc/eslint-plugin-lwc": "^1.3.0",
 		"@prettier/plugin-xml": "^2.2.0",
 		"@salesforce/eslint-config-lwc": "^3.3.2",
@@ -33,9 +34,10 @@
 		"eslint": "^8.17.0",
 		"eslint-plugin-import": "^2.26.0",
 		"eslint-plugin-jest": "^26.5.3",
+		"highlightjs-apex": "^1.1.0",
 		"husky": "^8.0.1",
 		"lint-staged": "^13.0.1",
-		"prettier": "^2.6.2",
+		"prettier": "^2.7.1",
 		"prettier-plugin-apex": "^1.10.0"
 	},
 	"lint-staged": {
