--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"apex:local:start": "node node_modules/prettier-plugin-apex/bin/start-apex-server.js",
 		"apex:local:stop": "node node_modules/prettier-plugin-apex/bin/stop-apex-server.js",
 		"apex:test:local": "rm testresults/* && sfdx force:apex:test:run -l RunLocalTests -d testresults -r human -c",
+		"orginit": ". scripts/orginit.sh",
 		"pmd:scan:csv": "$HOME/pmd/bin/run.sh pmd -d force-app -R pmd/ruleset.xml -f csv -r pmd/pmd.csv --cache .pmdCache --short-names --ignore-list .pmdignore",
 		"pmd:scan:deploy:csv": "$HOME/pmd/bin/run.sh pmd -d force-app -R pmd/deployRules.xml -f csv -r pmd/deploy.csv --cache .pmdCache --short-names --ignore-list src",
 		"prettier:apex:local": "prettier --apex-standalone-parser built-in --write \"force-app/**/*.{cls,cmp,component,css,html,js,json,md,page,trigger,yaml,yml}\" --ignore-list .pmdignore",
@@ -21,7 +22,8 @@
 		"prettier": "prettier --write --ignore-list .pmdignore \"**/*.{cls,cmp,component,css,html,js,json,md,page,trigger,xml,yaml,yml}\"",
 		"prettier:verify": "prettier --ignore-list .pmdignore --list-different \"**/*.{cls,cmp,component,css,html,js,json,md,page,trigger,xml,yaml,yml}\"",
 		"postinstall": "husky install",
-		"precommit": "lint-staged"
+		"precommit": "lint-staged",
+		"updatehighlight": ". doc-assets/updateHighlight.sh"
 	},
 	"devDependencies": {
 		"@highlightjs/cdn-assets": "^11.5.1",
@@ -31,12 +33,13 @@
 		"@salesforce/eslint-plugin-aura": "^2.1.0",
 		"@salesforce/eslint-plugin-lightning": "^1.0.0",
 		"@salesforce/sfdx-lwc-jest": "^1.1.0",
-		"eslint": "^8.17.0",
+		"eslint": "^8.18.0",
 		"eslint-plugin-import": "^2.26.0",
 		"eslint-plugin-jest": "^26.5.3",
 		"highlightjs-apex": "^1.1.0",
 		"husky": "^8.0.1",
-		"lint-staged": "^13.0.1",
+		"lint-staged": "^13.0.2",
+		"marked": "^4.0.17",
 		"prettier": "^2.7.1",
 		"prettier-plugin-apex": "^1.10.0"
 	},
