--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"@salesforce/eslint-plugin-lightning": "^1.0.0",
 		"@salesforce/sfdx-lwc-jest": "^1.1.0",
 		"eslint": "^8.18.0",
+		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-import": "^2.26.0",
 		"eslint-plugin-jest": "^26.5.3",
 		"highlightjs-apex": "^1.1.0",
