fix(prettier): remove reference to ignore-list

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,8 @@ on:
       - 'force-app/**'
       - 'pmd/**'
       - 'config/**'
+      - '.github/workflows/**'
+      - 'package.json'
 
 # Jobs to be executed
 jobs:
