fix(pmd): fix ruleset name

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,4 +67,4 @@ jobs:
 
       # Run PMD scan
       - name: 'Run PMD scan'
-        run: ~/pmd/bin/pmd check --dir force-app --rulesets pmd/apexQuickStart.xml --format text --cache .pmdCacje --minimum-priority "Medium Low"
+        run: ~/pmd/bin/pmd check --dir force-app --rulesets pmd/ruleset.xml --format text --cache .pmdCacje --minimum-priority "Medium Low"
