ci: run PR worklfow on script update

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -7,6 +7,7 @@ on:
     paths:
       - 'force-app/**'
       - 'pmd/**'
+      - '.github/workflows/pr.yml'
   workflow_dispatch:
 # Jobs to be executed
 jobs:
@@ -89,8 +90,8 @@ jobs:
 
       - name: Install SFDX CLI and Scanner
         run: |
-          npm install sfdx-cli -g
-          sfdx plugins:install @salesforce/sfdx-scanner
+          npm install sfdx-cli
+          npx sfdx plugins:install @salesforce/sfdx-scanner
 
       - name: Run SFDX Scanner - Report findings as comments
         uses: mitchspano/sfdx-scan-pull-request@v0.1.14
