--- a/.prettierignore
+++ b/.prettierignore
@@ -5,6 +5,7 @@
 **/staticresources/**
 .localdevserver
 .sfdx
+.sf
 .vscode
 
 scripts/soql/**
@@ -17,6 +18,7 @@ docs/assets/*
 data/
 
 .DS_Store
+*config.json
 
 # Exclude project config
 sfdx-project.json
