chore(prettier): finish Prettier3 update

--- a/.prettierrc
+++ b/.prettierrc
@@ -17,5 +17,6 @@
 			"options": { "parser": "html" }
 		}
 	],
-	"plugins": ["prettier-plugin-apex", "@prettier/plugin-xml"]
+	"plugins": ["prettier-plugin-apex", "@prettier/plugin-xml"],
+	"$schema": "https://json.schemastore.org/prettierrc"
 }
