--- a/.prettierrc
+++ b/.prettierrc
@@ -16,5 +16,7 @@
 			"files": "*.{cmp,page,component}",
 			"options": { "parser": "html" }
 		}
-	]
+	],
+	"plugins": ["prettier-plugin-apex", "@prettier/plugin-xml"],
+	"$schema": "https://json.schemastore.org/prettierrc"
 }
