--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,13 +1,34 @@
 {
-  "packages": {
-    ".": {
-      "changelog-path": "CHANGELOG.md",
-      "release-type": "sfdx",
-      "bump-minor-pre-major": false,
-      "bump-patch-for-minor-pre-major": false,
-      "draft": false,
-      "prerelease": false
-    }
-  },
-  "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json"
+	"packages": {
+		".": {
+			"changelog-path": "CHANGELOG.md",
+			"release-type": "sfdx",
+			"draft": false,
+			"prerelease": false
+		}
+	},
+	"changelog-path": "CHANGELOG.md",
+	"include-v-in-tag": true,
+	"plugins": [{ "type": "sentence-case" }],
+	"$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json",
+	"extra-files": [
+		{
+			"type": "json",
+			"path": "package.json",
+			"jsonpath": "$.version"
+		}
+	],
+	"changelog-sections": [
+		{ "type": "feat", "section": "Features", "hidden": false },
+		{ "type": "fix", "section": "Bug Fixes", "hidden": false },
+		{ "type": "test", "section": "Tests", "hidden": false },
+		{ "type": "perf", "section": "Performance Improvements", "hidden": false },
+		{ "type": "revert", "section": "Reverts", "hidden": false },
+		{ "type": "refactor", "section": "Code Refactoring", "hidden": false },
+		{ "type": "style", "section": "Styles", "hidden": false },
+		{ "type": "docs", "section": "Documentation", "hidden": false },
+		{ "type": "chore", "section": "Miscellaneous Chores", "hidden": false },
+		{ "type": "ci", "section": "Continuous Integration", "hidden": false },
+		{ "type": "build", "section": "Build System", "hidden": false }
+	]
 }
