chore(release-please): install release-please (#70)
* chore(release-please): bootstrap releases for path: . (#69)

* feat: install Release-Please

* style: prettify documentation

---------

Signed-off-by: David Schach <636977+dschach@users.noreply.github.com>

--- a/.prettierrc
+++ b/.prettierrc
@@ -15,6 +15,10 @@
 		{
 			"files": "*.{cmp,page,component}",
 			"options": { "parser": "html" }
+		},
+		{
+			"files": "*.yml",
+			"options": { "parser": "yaml" }
 		}
 	],
 	"plugins": ["prettier-plugin-apex", "@prettier/plugin-xml"],
