--- a/.prettierrc
+++ b/.prettierrc
@@ -7,6 +7,7 @@
 	"bracketSpacing": true,
 	"apexInsertFinalNewline": false,
 	"bracketSameLine": true,
+	"htmlWhitespaceSensitivity": "ignore",
 	"overrides": [
 		{
 			"files": "**/lwc/**/*.html",
