--- a/release-please-config.json
+++ b/release-please-config.json
@@ -29,6 +29,6 @@
 		{ "type": "docs", "section": "Documentation", "hidden": false },
 		{ "type": "chore", "section": "Miscellaneous Chores", "hidden": false },
 		{ "type": "ci", "section": "Continuous Integration", "hidden": false },
-		{ "type": "build", "section": "Build System", "hidden": false }
+		{ "type": "build", "section": "Build System", "hidden": true }
 	]
 }
