--- a/.prettierrc
+++ b/.prettierrc
@@ -15,7 +15,7 @@
 		},
 		{
 			"files": "*.{cmp,page,component}",
-			"options": { "parser": "html" }
+			"options": { "parser": "html", "tabWidth": 4 }
 		},
 		{
 			"files": "*.yml",
