--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -20,17 +20,14 @@ jobs:
         uses: actions/checkout@v3
 
       # Install Salesforce CLI
-      - name: 'Install Salesforce sfdx CLI'
-        run: |
-          npm install sfdx-cli --location=global
-          nodeInstallPath=$(npm config get prefix)
-          echo "$nodeInstallPath/bin" >> $GITHUB_PATH
-          sfdx --version
-
       - name: 'Install Salesforce sf CLI'
         run: |
           npm install @salesforce/cli --global
           sf --version
+
+      # Log out of all orgs to avoid refresh token error
+      - name: 'Log out of all orgs'
+        run: sf org logout --target-org devhub
 
       # Store secret for dev hub
       - name: 'Populate auth file with DEVHUB_SFDX_URL secret'
