--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
 		"lint-staged": "^14.0.0",
 		"marked": "^7.0.4",
 		"prettier": "^3.0.2",
-		"prettier-plugin-apex": "^2.0.1",
-		"release-please": "^15.12.0"
+		"prettier-plugin-apex": "^2.0.1"
 	},
 	"lint-staged": {
 		"**/*.{cls,cmp,component,css,html,js,json,md,page,trigger,xml,yaml,yml}": [
