--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
 		"lint-staged": "^15.0.2",
 		"marked": "^9.1.5",
 		"prettier": "^3.0.3",
-		"prettier-plugin-apex": "^2.0.1",
-		"release-please": "^16.2.0"
+		"prettier-plugin-apex": "^2.0.1"
 	},
 	"lint-staged": {
 		"**/*.{cls,cmp,component,css,html,js,json,md,page,trigger,xml,yaml,yml}": [
