--- a/package.json
+++ b/package.json
@@ -23,14 +23,15 @@
 		"prettier:verify": "prettier --list-different \"**/*.{cls,cmp,component,css,html,js,json,md,page,trigger,xml,yaml,yml}\"",
 		"postinstall": "husky install",
 		"precommit": "lint-staged",
+		"prune": "git branch | grep -v \"main\" | xargs git branch -D",
 		"updatehighlight": ". doc-assets/updateHighlight.sh"
 	},
 	"devDependencies": {
 		"@prettier/plugin-xml": "^3.2.2",
 		"husky": "^8.0.3",
 		"lint-staged": "^15.2.0",
-		"marked": "^11.0.1",
-		"prettier": "^3.1.1",
+		"marked": "^11.0.0",
+		"prettier": "^3.1.0",
 		"prettier-plugin-apex": "^2.0.1"
 	},
 	"lint-staged": {
