--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
 		"apex:local:stop": "node node_modules/prettier-plugin-apex/dist/bin/stop-apex-server.js",
 		"apex:test:local": "rm testresults/* && sfdx force:apex:test:run -l RunLocalTests -d testresults -r human -c",
 		"orginit": ". scripts/orginit.sh",
-		"pmd:scan:csv": "$HOME/pmd/bin/run.sh pmd -d force-app -R pmd/ruleset.xml -f csv -r pmd/pmd.csv --cache .pmdCache --short-names --ignore-list .pmdignore",
-		"pmd:scan:deploy:csv": "$HOME/pmd/bin/run.sh pmd -d force-app -R pmd/deployRules.xml -f csv -r pmd/deploy.csv --cache .pmdCache --short-names --ignore-list src",
+		"pmd:scan:csv": "$HOME/pmd/bin/run.sh pmd -d force-app -R config/pmd/ruleset.xml -f csv -r config/pmd/pmd.csv --cache .pmdCache --short-names --ignore-list .pmdignore",
+		"pmd:scan:deploy:csv": "$HOME/pmd/bin/run.sh pmd -d force-app -R config/pmd/deployRules.xml -f csv -r config/pmd/deploy.csv --cache .pmdCache --short-names --ignore-list src",
 		"prettier:apex:local": "prettier --apex-standalone-parser built-in --write \"force-app/**/*.{cls,cmp,component,css,html,js,json,md,page,trigger,yaml,yml}\" --ignore-list .pmdignore",
 		"prettier:docs": "prettier --write \"docs/*.html\"",
 		"prettier:verify:apex:local": "prettier --apex-standalone-parser built-in --list-different \"force-app/**/*.{cls,cmp,component,css,html,js,json,md,page,trigger,yaml,yml}\" --ignore-list .pmdignore",
