--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
 		"prettier:verify:apex:local": "prettier --apex-standalone-parser built-in --list-different \"force-app/**/*.{cls,cmp,component,css,html,js,json,md,page,trigger,yaml,yml}\" --ignore-list .pmdignore",
 		"prettier": "prettier --write \"**/*.{cls,cmp,component,css,html,js,json,md,page,trigger,xml,yaml,yml}\"",
 		"prettier:verify": "prettier --list-different \"**/*.{cls,cmp,component,css,html,js,json,md,page,trigger,xml,yaml,yml}\"",
-		"postinstall": "husky install",
+		"prepare": "husky",
 		"precommit": "lint-staged",
 		"updatehighlight": ". doc-assets/updateHighlight.sh"
 	},
