--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,19 +29,13 @@ jobs:
       - name: 'Checkout source code'
         uses: actions/checkout@v4
 
-      # Cache node_modules to speed up the process
-      - name: 'Restore node_modules cache'
-        id: cache-npm
-        uses: actions/cache@v4
+      - name: 'Setup node'
+        uses: actions/setup-node@v4
         with:
-          path: node_modules
-          key: npm-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            npm-${{ env.cache-name }}-
-            npm-
-      # Install npm dependencies for Prettier and Jest
-      - name: 'Install npm dependencies'
-        if: steps.cache-npm.outputs.cache-hit != 'true'
+          node-version: 'lts/*'
+          cache: 'npm'
+
+      - name: 'Install NPM'
         run: npm ci
 
       # Prettier formatting
